fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -210,7 +210,7 @@ body {
             }
             .art_desc_product_d2_co {
                 width: 40%;
-                // width: 600px;
+                //width: 600px;
                 display: -webkit-box;
                 display: -ms-flexbox;
                 display: flex;
@@ -222,11 +222,15 @@ body {
                 justify-content: center;
                 -ms-flex-wrap: wrap;
                 flex-wrap: wrap;
-                // background: #e0efef;
+                //background: #e0efef;
                 margin: 0 0 auto;
                 padding: 0;
                 position: relative;
-                border-radius: 8px;
+                border-radius: 80px;
+                -webkit-border-radius: 80px;
+                -moz-border-radius: 80px;
+                -ms-border-radius: 80px;
+                -o-border-radius: 80px;
                 overflow: hidden;
                 @include mobile {
                     width: 100%;
